Subzero: Change the name llvm2ice to the more appropriate pnacl-sz.
Most of this is a mechanical change of 'llvm2ice' to 'pnacl-sz'.  This is a convenient naming choice because both strings are the same length which minimizes the need for line length reformatting.

Python variables needed to use pnacl_sz instead, and sometimes pnacl_sz_ .

The IceConverter still uses LLVM2Ice naming, which is actually appropriate there since it actually converts LLVM IR into ICE.

I will rename tests_lit/llvm2ice_tests/ in a separate CL, otherwise this CL will look misleadingly massive and no one will review it.

BUG= none
R=kschimpf@google.com

Review URL: https://codereview.chromium.org/956123002

--- a/bloat/pnacl-sz.bloat.html
+++ b/bloat/pnacl-sz.bloat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <title>Subzero size breakdown</title>
-<script src='../build/llvm2ice.bloat.json'></script>
+<script src='../build/pnacl-sz.bloat.json'></script>
 <link rel='stylesheet' href='webtreemap.css'>
 <style>
 body {
